k8s-manifests/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inno-ingress
  namespace: inno-k8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: inno.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8085
